        <android.support.v7.widget.CardView

            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cv"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            card_view:cardCornerRadius="0dp"
            android:paddingTop="15dp"
            card_view:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:adjustViewBounds="true"
                    android:id="@+id/image"
                    android:scaleType="centerCrop"
                    android:layout_below="@+id/name"
                    android:contentDescription="@string/church1"
                    android:layout_alignParentTop="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:id="@+id/name"
                    android:text="@string/church1"
                    android:layout_marginLeft="44dp"
                    android:layout_marginStart="37dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="150dp"
                    android:textColor="#ffffffff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/site_distance"
                    android:id="@+id/distanceIndicator"
                    android:paddingBottom="16dp"
                    android:layout_below="@+id/name"
                    android:layout_alignLeft="@+id/name"
                    android:layout_alignStart="@+id/name"
                    android:textColor="#b3ffffff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_location"
                    android:id="@+id/showMap"
                    android:layout_below="@+id/distanceIndicator"
                    android:layout_alignLeft="@+id/distanceIndicator"
                    android:layout_alignStart="@+id/distanceIndicator"
                    android:paddingBottom="8dp"
                    android:clickable="true"
                    android:textColor="#ffd6d7d7"
                    android:contextClickable="false"
                    android:onClick="setContentView" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_directions"
                    android:id="@+id/navToLocation"
                    android:layout_marginRight="44dp"
                    android:layout_marginEnd="44dp"
                    android:layout_below="@+id/distanceIndicator"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:clickable="true"
                    android:textColor="#ffd6d7d7" />


            </RelativeLayout>





        </android.support.v7.widget.CardView>

