<ScrollView
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1"
        android:clickable="false">

        <android.support.v7.widget.CardView


            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/Card_1"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            card_view:cardCornerRadius="2dp"
            android:paddingTop="24dp"
            card_view:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/image1"
                    android:src="@drawable/st_pauls_4"
                    android:scaleType="centerCrop"
                    android:layout_below="@+id/churchName1"
                    android:contentDescription="@string/church1"
                    android:layout_alignParentTop="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:id="@+id/churchName1"
                    android:text="@string/church1"
                    android:layout_marginLeft="44dp"
                    android:layout_marginStart="37dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="150dp"
                    android:textColor="#ffffffff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/site_distance"
                    android:id="@+id/distanceIndicator"
                    android:paddingBottom="16dp"
                    android:layout_below="@+id/churchName1"
                    android:layout_alignLeft="@+id/churchName1"
                    android:layout_alignStart="@+id/churchName1"
                    android:textColor="#b3ffffff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_location"
                    android:id="@+id/showMap"
                    android:layout_below="@+id/distanceIndicator"
                    android:layout_alignLeft="@+id/distanceIndicator"
                    android:layout_alignStart="@+id/distanceIndicator"
                    android:paddingBottom="8dp"
                    android:clickable="true"
                    android:textColor="#ffd6d7d7"
                    android:contextClickable="false"
                    android:onClick="setContentView" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_directions"
                    android:id="@+id/navToLocation"
                    android:layout_marginRight="44dp"
                    android:layout_marginEnd="44dp"
                    android:layout_below="@+id/distanceIndicator"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:clickable="true"
                    android:textColor="#ffd6d7d7" />


            </RelativeLayout>





    </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView


            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/Card_2"
            android:layout_below="@id/Card_1"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_marginTop="8dp"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/image2"
                    android:src="@drawable/westminster_3"
                    android:scaleType="centerCrop"
                    android:layout_below="@+id/churchName2"
                    android:contentDescription="@string/church2"
                    android:layout_alignParentTop="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:id="@+id/churchName2"
                    android:text="@string/church2"
                    android:layout_marginLeft="44dp"
                    android:layout_marginStart="37dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="150dp"
                    android:textColor="#ffffffff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/site_distance"
                    android:id="@+id/distanceIndicator2"
                    android:paddingBottom="16dp"
                    android:layout_below="@+id/churchName2"
                    android:layout_alignLeft="@+id/churchName2"
                    android:layout_alignStart="@+id/churchName2"
                    android:textColor="#b3ffffff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_location"
                    android:id="@+id/showMap2"
                    android:layout_below="@+id/distanceIndicator2"
                    android:layout_alignLeft="@+id/distanceIndicator2"
                    android:layout_alignStart="@+id/distanceIndicator2"
                    android:paddingBottom="8dp"
                    android:clickable="true"
                    android:textColor="#ffd6d7d7" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_directions"
                    android:id="@+id/navToLocation2"
                    android:layout_marginRight="44dp"
                    android:layout_marginEnd="44dp"
                    android:layout_below="@+id/distanceIndicator2"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:clickable="true"
                    android:textColor="#ffd6d7d7" />


            </RelativeLayout>





        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView


            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/Card_3"
            android:layout_below="@id/Card_2"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_marginTop="8dp"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/image3"
                    android:src="@drawable/all_hallows_4"
                    android:layout_below="@+id/churchName3"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/church3"
                    android:layout_alignParentTop="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:id="@+id/churchName3"
                    android:text="@string/church3"
                    android:layout_marginLeft="44dp"
                    android:layout_marginStart="37dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="150dp"
                    android:textColor="#ffffffff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/site_distance"
                    android:id="@+id/distanceIndicator3"
                    android:paddingBottom="16dp"
                    android:layout_below="@+id/churchName3"
                    android:layout_alignLeft="@+id/churchName3"
                    android:layout_alignStart="@+id/churchName3"
                    android:textColor="#b3ffffff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_location"
                    android:id="@+id/showMap3"
                    android:layout_below="@+id/distanceIndicator3"
                    android:layout_alignLeft="@+id/distanceIndicator3"
                    android:layout_alignStart="@+id/distanceIndicator3"
                    android:paddingBottom="8dp"
                    android:clickable="true"
                    android:textColor="#ffd6d7d7" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_directions"
                    android:id="@+id/navToLocation3"
                    android:layout_marginRight="44dp"
                    android:layout_marginEnd="44dp"
                    android:layout_below="@+id/distanceIndicator3"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:clickable="true"
                    android:textColor="#ffd6d7d7" />


            </RelativeLayout>





        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView


            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/Card_4"
            android:layout_below="@id/Card_3"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_marginTop="8dp"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/image4"
                    android:src="@drawable/st_martin_2"
                    android:layout_below="@+id/churchName4"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/church4"
                    android:layout_alignParentTop="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:id="@+id/churchName4"
                    android:text="@string/church4"
                    android:layout_marginLeft="44dp"
                    android:layout_marginStart="37dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="150dp"
                    android:textColor="#ffffffff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/site_distance"
                    android:id="@+id/distanceIndicator4"
                    android:paddingBottom="16dp"
                    android:layout_below="@+id/churchName4"
                    android:layout_alignLeft="@+id/churchName4"
                    android:layout_alignStart="@+id/churchName4"
                    android:textColor="#b3ffffff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_location"
                    android:id="@+id/showMap4"
                    android:layout_below="@+id/distanceIndicator4"
                    android:layout_alignLeft="@+id/distanceIndicator4"
                    android:layout_alignStart="@+id/distanceIndicator4"
                    android:paddingBottom="8dp"
                    android:clickable="true"
                    android:textColor="#ffd6d7d7" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_directions"
                    android:id="@+id/navToLocation4"
                    android:layout_marginRight="44dp"
                    android:layout_marginEnd="44dp"
                    android:layout_below="@+id/distanceIndicator4"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:clickable="true"
                    android:textColor="#ffd6d7d7" />


            </RelativeLayout>





        </android.support.v7.widget.CardView>


    </RelativeLayout>

</ScrollView>